syntax = "proto3";
package pryzm.amm;

option go_package = "github.com/pryzm-finance/pryzm-core/x/amm/types";

message RouteStep {
  uint64 pool_id = 1;
  string token_in = 2;
  string token_out = 3;
}
